# toolbox

./: .codespellexcludefile  .gitignore  .gitmodules  .mailmap  .travis.yml  .zuul.yaml  CNAME  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOALS.md  NEWS  NEWS.old  OWNERS  README.md  SECURITY.md  _config.yml  extra-packages  fedora-toolbox  fedora-toolbox-sudo  gen-docs-list  go-build-wrapper  go.sum  index.md  meson.build  meson_options.txt  meson_post_install.py  style.css  toolbox  toolbox-old
.github/: CODEOWNERS  dependabot.yml  pull_request.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: arch-images-pr.yaml  arch-images.yaml  debian-images-pr.yaml  debian-images.yaml  image-factory.yaml  linting.yaml  rust.yml  ubuntu-images.yaml  ubuntu-tests.yaml
_includes/: footer.html  head.html  header.html
cmd/: create.go  enter.go  help.go  rm.go
completion/: generate_completions.py  meson.build  meson_generate_completions.py
completion/bash/: toolbox
coretoolbox/: Cargo.toml  LICENSE-MIT  README.md
coretoolbox/src/: podman.rs
data/: meson.build
data/config/: meson.build  toolbox.conf
data/libexec/: host-runner  meson.build  sudo-wrapper
data/tmpfiles.d/: meson.build  toolbox.conf
doc/: meson.build  toolbox-create.1.md  toolbox-enter.1.md  toolbox-export.1.md  toolbox-help.1.md  toolbox-init-container.1.md  toolbox-list.1.md  toolbox-rename.1.md  toolbox-reset.1.md  toolbox-rm.1.md  toolbox-rmi.1.md  toolbox-run.1.md  toolbox-unexport.1.md  toolbox-upgrade.1.md  toolbox.1.md  toolbox.conf.5.md
images/: build-fedora
images/arch/: Containerfile  Dockerfile  extra-packages
images/archlinux/: Dockerfile  extra-packages
libc-wrappers/: libc-wrappers.c  meson.build
pkg/utils/: utils.go
pkg/version/: version.go
playbooks/: build.yaml  dependencies-centos-9-stream.yaml  dependencies-fedora-restricted.yaml  dependencies-fedora.yaml  dependencies.yaml  pre-common.yaml  setup-env-migration-path-for-coreos-toolbox.yaml  setup-env-restricted.yaml  setup-env.yaml  setup-test-env.yaml  shellcheck.yaml  system-test-commands-options.yaml  system-test-non-native.yaml  system-test-runtime-environment-arch-fedora.yaml  system-test-runtime-environment-ubuntu.yaml  system-test-runtime-environment.yaml  system-test.yaml  toolbox-test.yaml  unit-test.yaml
playbooks/arch/: dependencies.yaml  setup.yaml
playbooks/fedora-30/: pre-common.yaml  setup-rpm-env.yaml  test-with-podman-stable.yaml
playbooks/fedora-31/: pre-common.yaml  setup-env.yaml  setup-rpm-env.yaml  system-test-fedora-31.yaml  test-with-podman-stable.yaml
playbooks/fedora-32/: pre-common.yaml  setup-env.yaml  test-with-podman-stable.yaml
playbooks/fedora-33/: pre-common.yaml  setup-env.yaml  (+1 more)
profile.d/: meson.build  toolbox.sh
src/: cmdrunext.rs  coretoolbox.rs  go-build-wrapper  go-build-wrapper.py  go.mod  go.sum  meson.build  meson_generate_completions.py  meson_go_fmt.py  podman.rs  toolbox.go
src/cmd/: cgo_util.go  completion.go  create.go  createShim.go  enter.go  export.go  help.go  initContainer.go  list.go  rename.go  reset.go  rm.go  rmi.go  root.go  rootDefault.go  rootMigrationPath.go  root_test.go  run.go  sh.go  test.go  unexport.go  upgrade.go  utils.go
src/libc-wrappers/: libc-wrappers.c
src/pkg/architecture/: architecture.go  architecture_test.go  binfmt_misc.go  binfmt_misc_test.go
src/pkg/i18n/: Makefile  README.md  i18n.go  i18n_test.go
src/pkg/i18n/locale/: toolbox.pot
src/pkg/i18n/locale/test/en_US/LC_MESSAGES/: test.mo  test.po
src/pkg/i18n/locale/toolbox/default/LC_MESSAGES/: toolbox.mo  toolbox.po
src/pkg/i18n/locale/toolbox/en_US/LC_MESSAGES/: toolbox.mo  toolbox.po
src/pkg/i18n/locale/toolbox/ja_JP/LC_MESSAGES/: toolbox.mo  toolbox.po
src/pkg/nvidia/: nvidia.go
src/pkg/podman/: container.go  containerInspect_test.go  error.go  error_test.go  errors.go  image.go  imageImages_test.go  imageInspect_test.go  podman.go  podman_test.go
src/pkg/shell/: shell.go  shell_test.go
src/pkg/skopeo/: skopeo.go  skopeo_test.go
src/pkg/term/: term.go  term_test.go
src/pkg/toolbox/: image.go  utils.go
src/pkg/utils/: arch.go  errors.go  fedora.go  libsubid-wrappers.c  libsubid-wrappers.h  rhel.go  ubuntu.go  utils.go  utils_cgo.go  utils_test.go
src/pkg/version/: version.go
test/: meson.build
test/binary/: README.md  (+3 more)
test/system/: 000-setup.bats  001-basics.bats  001-version.bats  002-help.bats  100-root.bats  101-create.bats  101-list.bats  102-create.bats  102-list.bats  103-container.bats  103-list.bats  103-remove.bats  103-run.bats  104-container.bats  104-rm.bats  104-run.bats  105-enter.bats  105-rm.bats  105-rmi.bats  106-rename.bats  106-rm.bats  106-rmi.bats  107-rmi.bats  108-completion.bats  109-export.bats  110-unexport.bats  111-upgrade.bats  201-ipc.bats  201-run.bats  203-network.bats  206-user.bats  210-ulimit.bats  211-dbus.bats  220-environment-variables.bats  230-cdi.bats  250-kerberos.bats  260-pkcs11.bats  270-rpm.bats  301-create.bats  301-rm.bats  (+19 more)
test/system/config/: containers.conf  dbus-session.conf
test/system/data/: bash_profile  cdi-hooks-00.json  cdi-hooks-01.json  cdi-hooks-02.json  cdi-hooks-10.json  cdi-hooks-11.json  cdi-hooks-12.json  cdi-hooks-13.json  cdi-hooks-14.json  cdi-hooks-15.json  cdi-hooks-create-symlinks-00.json  cdi-hooks-create-symlinks-01.json  cdi-hooks-create-symlinks-02.json  cdi-hooks-create-symlinks-03.json  cdi-hooks-create-symlinks-04.json  cdi-hooks-create-symlinks-05.json  cdi-hooks-create-symlinks-06.json  cdi-hooks-create-symlinks-07.json  cdi-hooks-create-symlinks-08.json  cdi-hooks-create-symlinks-30.json  cdi-hooks-create-symlinks-31.json  cdi-hooks-create-symlinks-32.json  cdi-hooks-create-symlinks-33.json  cdi-hooks-create-symlinks-34.json  cdi-hooks-create-symlinks-35.json  cdi-hooks-create-symlinks-36.json  cdi-hooks-create-symlinks-37.json  cdi-mounts-10.json  cdi-mounts-11.json  cdi-mounts-12.json  required-packages-fedora-34
test/system/libs/: .helpers.bash.swp  helpers.bash  meson.build
toolbox-rs/: Cargo.toml  README.md
(+150 files in other folders)
