install_subdir(
  'system',
  install_dir: testdir,
  exclude_files: [
    'libs/bats-assert/.git',
    'libs/bats-assert/.gitignore',
    'libs/bats-assert/.travis.yml',
    'libs/bats-assert/package.json',
    'libs/bats-support/.git',
    'libs/bats-support/.gitignore',
    'libs/bats-support/.travis.yml',
    'libs/bats-support/package.json'
    ],
  exclude_directories: [
    'libs/bats-assert/.git',
    'libs/bats-assert/script',
    'libs/bats-assert/test',
    'libs/bats-support/.git',
    'libs/bats-support/script',
    'libs/bats-support/test'
  ]
)

